compiler/testData/diagnostics/tests/annotations/DanglingInScript.kts
// FILE: script.kts

annotation class Ann

@Ann<!SYNTAX!><!>